--- a/.azure/ubuntu-pipeline.yml
+++ b/.azure/ubuntu-pipeline.yml
@@ -13,5 +13,8 @@ steps:
 - script: Vendor/Binaries/Premake/Linux/premake5 --file=Build.lua gmake
   displayName: 'Run premake'
 
-- script: make all
-  displayName: 'Run make'
+#- script: make all
+#  displayName: 'Run make'
+
+- script: which gcc
+  displayName: 'Find GCC'
