--- a/.azure/ubuntu-pipeline.yml
+++ b/.azure/ubuntu-pipeline.yml
@@ -16,5 +16,8 @@ steps:
 #- script: make all
 #  displayName: 'Run make'
 
-- script: which gcc
+- script: gcc -v
   displayName: 'Find GCC'
+
+- script: ls -l /usr/bin/gcc*
+  displayName: 'List GCC'
