--- a/.azure/ubuntu-pipeline.yml
+++ b/.azure/ubuntu-pipeline.yml
@@ -13,11 +13,7 @@ steps:
 - script: Vendor/Binaries/Premake/Linux/premake5 --file=Build.lua gmake
   displayName: 'Run premake'
 
-#- script: make all
-#  displayName: 'Run make'
-
-- script: gcc -v
-  displayName: 'Find GCC'
-
-- script: ls -l /usr/bin/gcc*
-  displayName: 'List GCC'
+- script: make all
+  displayName: 'Run make'
+  env:
+    CC: /usr/bin/gcc-10
