Use the windows image

--- a/.azure/windows-pipeline.yml
+++ b/.azure/windows-pipeline.yml
@@ -4,7 +4,7 @@ trigger:
 - azure-pipelines
 
 pool:
-  vmImage: ubuntu-latest
+  vmImage: windows-latest
 
 steps:
 - script: Vendor\Binaries\Premake\Windows\premake5.exe --file=Build.lua vs2022
