--- a/.azure/windows-pipeline.yml
+++ b/.azure/windows-pipeline.yml
@@ -10,5 +10,5 @@ steps:
 - script: Vendor\Binaries\Premake\Windows\premake5.exe --file=Build.lua vs2022
   displayName: 'Run premake'
 
-- scipt: dir
+- script: dir
   displayName: 'list files'
