Use the VSBuild task

--- a/.azure/windows-pipeline.yml
+++ b/.azure/windows-pipeline.yml
@@ -10,5 +10,7 @@ steps:
 - script: Vendor\Binaries\Premake\Windows\premake5.exe --file=Build.lua vs2022
   displayName: 'Run premake'
 
-- script: msbuild "New Project.sln"
-  displayName: 'Run msbuild'
+- task: VSBuild@1
+  desplayName: 'msbuild'
+  inputs:
+    solution: 'New Project.sln'
