Fix another typo

--- a/.azure/windows-pipeline.yml
+++ b/.azure/windows-pipeline.yml
@@ -11,6 +11,6 @@ steps:
   displayName: 'Run premake'
 
 - task: VSBuild@1
-  desplayName: 'msbuild'
+  displayName: 'msbuild'
   inputs:
     solution: 'New Project.sln'
