Fix premake path

--- a/.azure/mac-pipeline.yml
+++ b/.azure/mac-pipeline.yml
@@ -5,7 +5,7 @@ pool:
   vmImage: macOS-13
 
 steps:
-- script: Vendor\Binaries\Premake\Windows\premake5.exe --file=Build.lua xcode4
+- script: Vendor/Binaries/Premake/macOS/premake5 --file=Build.lua xcode4
   displayName: 'Run premake'
 
 - task: Xcode@5
