--- a/.azure/mac-pipeline.yml
+++ b/.azure/mac-pipeline.yml
@@ -13,3 +13,4 @@ steps:
     actions: 'build'
     xcWorkspacePath: 'New Project.xcworkspace'
     xcodeVersion: '14.2'
+    xcodeDeveloperDir: '/Applications/Xcode_14.2.app'
