Change to specifyPath

--- a/.azure/mac-pipeline.yml
+++ b/.azure/mac-pipeline.yml
@@ -12,5 +12,5 @@ steps:
   inputs:
     actions: 'build'
     xcWorkspacePath: 'New Project.xcworkspace'
-    xcodeVersion: '14.2'
+    xcodeVersion: 'specifyPath'
     xcodeDeveloperDir: '/Applications/Xcode_14.2.app'
