--- a/.azure/mac-pipeline.yml
+++ b/.azure/mac-pipeline.yml
@@ -12,5 +12,6 @@ steps:
   inputs:
     actions: 'build'
     xcWorkspacePath: 'New Project.xcworkspace'
+    scheme: 'App'
     xcodeVersion: 'specifyPath'
     xcodeDeveloperDir: '/Applications/Xcode_14.2.app'
