More xcode params

--- a/.azure/mac-pipeline.yml
+++ b/.azure/mac-pipeline.yml
@@ -13,5 +13,7 @@ steps:
     actions: 'build'
     xcWorkspacePath: 'New Project.xcworkspace'
     scheme: 'App'
+    configuration: 'Debug'
+    sdk: 'macosx13.1'
     xcodeVersion: 'specifyPath'
     xcodeDeveloperDir: '/Applications/Xcode_14.2.app'
