First steps to having sccache

--- a/.azure/ubuntu-pipeline.yml
+++ b/.azure/ubuntu-pipeline.yml
@@ -5,6 +5,26 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
+# Download GitHub Release v0
+# Downloads a GitHub Release from a repository.
+- task: DownloadGitHubRelease@0
+  inputs:
+    connection: jretterer-prol
+    userRepository: mozilla/sccache 
+    defaultVersionType: 'specificVersion' # 'latest' | 'specificVersion' | 'specificTag'. Required. Default version. Default: latest.
+    version: 'v0.8.0' 
+    downloadPath: '$(System.ArtifactsDirectory)' # string. Required. Destination directory. Default: $(System.ArtifactsDirectory).
+
+# Extract files v1
+# Extract a variety of archive and compression files such as .7z, .rar, .tar.gz, and .zip.
+- task: ExtractFiles@1
+  inputs:
+    archiveFilePatterns: '$(System.ArtifactsDirectory)/sccache-v0.8.0-x86_64-unknown-linux-musl.tar.gz ' # string. Required. Archive file patterns. Default: **/*.zip.
+    destinationFolder: $(System.ArtifactsDirectory)/sccache
+
+- script: $(System.ArtifactsDirectory)/sccache/sccache --version
+  displayName: 'Run sccache'
+
 - script: Vendor/Binaries/Premake/Linux/premake5 --file=Build.lua gmake
   displayName: 'Run premake'
 
