Just use latest for now

--- a/.azure/ubuntu-pipeline.yml
+++ b/.azure/ubuntu-pipeline.yml
@@ -11,8 +11,8 @@ steps:
   inputs:
     connection: jretterer-prol
     userRepository: mozilla/sccache 
-    defaultVersionType: 'specificVersion' # 'latest' | 'specificVersion' | 'specificTag'. Required. Default version. Default: latest.
-    version: 'v0.8.0' 
+    defaultVersionType: 'latest' # 'latest' | 'specificVersion' | 'specificTag'. Required. Default version. Default: latest.
+    #version: 'v0.8.0' 
     downloadPath: '$(System.ArtifactsDirectory)' # string. Required. Destination directory. Default: $(System.ArtifactsDirectory).
 
 # Extract files v1
