--- a/.azure/ubuntu-pipeline.yml
+++ b/.azure/ubuntu-pipeline.yml
@@ -12,14 +12,15 @@ steps:
     connection: jretterer-prol
     userRepository: mozilla/sccache 
     defaultVersionType: 'latest' # 'latest' | 'specificVersion' | 'specificTag'. Required. Default version. Default: latest.
-    #version: 'v0.8.0' 
+    #version: 'v0.8.0'
+    itemPattern: 'sccache-v0.8.0-x86_64-unknown-linux-musl.tar.gz'
     downloadPath: '$(System.ArtifactsDirectory)' # string. Required. Destination directory. Default: $(System.ArtifactsDirectory).
 
 # Extract files v1
 # Extract a variety of archive and compression files such as .7z, .rar, .tar.gz, and .zip.
 - task: ExtractFiles@1
   inputs:
-    archiveFilePatterns: '$(System.ArtifactsDirectory)/sccache-v0.8.0-x86_64-unknown-linux-musl.tar.gz ' # string. Required. Archive file patterns. Default: **/*.zip.
+    archiveFilePatterns: '$(System.ArtifactsDirectory)/sccache-v0.8.0-x86_64-unknown-linux-musl.tar.gz' # string. Required. Archive file patterns. Default: **/*.zip.
     destinationFolder: $(System.ArtifactsDirectory)
 
 - script: $(System.ArtifactsDirectory)/sccache-v0.8.0-x86_64-unknown-linux-musl/sccache --version
