--- a/.azure/ubuntu-pipeline.yml
+++ b/.azure/ubuntu-pipeline.yml
@@ -21,9 +21,9 @@ steps:
 - task: ExtractFiles@1
   inputs:
     archiveFilePatterns: '$(System.ArtifactsDirectory)/sccache-v0.8.0-x86_64-unknown-linux-musl.tar.gz' # string. Required. Archive file patterns. Default: **/*.zip.
-    destinationFolder: $(System.ArtifactsDirectory)
+    destinationFolder: $(System.ArtifactsDirectory)/sccache
 
-- script: $(System.ArtifactsDirectory)/sccache-v0.8.0-x86_64-unknown-linux-musl/sccache --version
+- script: $(System.ArtifactsDirectory)/sccache/sccache-v0.8.0-x86_64-unknown-linux-musl/sccache --version
   displayName: 'Run sccache'
 
 - script: Vendor/Binaries/Premake/Linux/premake5 --file=Build.lua gmake
