--- a/.azure/ubuntu-pipeline.yml
+++ b/.azure/ubuntu-pipeline.yml
@@ -23,8 +23,8 @@ steps:
     archiveFilePatterns: '$(System.ArtifactsDirectory)/sccache-v0.8.0-x86_64-unknown-linux-musl.tar.gz' # string. Required. Archive file patterns. Default: **/*.zip.
     destinationFolder: $(System.ArtifactsDirectory)/sccache
 
-- script: $(System.ArtifactsDirectory)/sccache/sccache-v0.8.0-x86_64-unknown-linux-musl/sccache --version
-  displayName: 'Run sccache'
+- script: $(System.ArtifactsDirectory)/sccache/sccache-v0.8.0-x86_64-unknown-linux-musl/sccache --start-server
+  displayName: 'Start sccache'
 
 - script: Vendor/Binaries/Premake/Linux/premake5 --file=Build.lua gmake
   displayName: 'Run premake'
@@ -32,5 +32,8 @@ steps:
 - script: make all
   displayName: 'Run make'
   env:
-    CC: /usr/bin/gcc-10
-    CXX: /usr/bin/g++-10
+    CC: $(System.ArtifactsDirectory)/sccache/sccache-v0.8.0-x86_64-unknown-linux-musl/sccache /usr/bin/gcc-10
+    CXX: $(System.ArtifactsDirectory)/sccache/sccache-v0.8.0-x86_64-unknown-linux-musl/sccache /usr/bin/g++-10
+
+- script: $(System.ArtifactsDirectory)/sccache/sccache-v0.8.0-x86_64-unknown-linux-musl/sccache --stop-server
+  displayName: 'Stop sccache'
