--- a/.azure/mac-pipeline.yml
+++ b/.azure/mac-pipeline.yml
@@ -5,6 +5,22 @@ pool:
   vmImage: macOS-13
 
 steps:
+- task: DownloadGitHubRelease@0
+  inputs:
+    connection: jretterer-prol
+    userRepository: mozilla/sccache 
+    defaultVersionType: 'latest'
+    itemPattern: 'sccache-v0.8.0-x86_64-apple-darwin.tar.gz '
+    downloadPath: '$(System.ArtifactsDirectory)' 
+
+- task: ExtractFiles@1
+  inputs:
+    archiveFilePatterns: '$(System.ArtifactsDirectory)/sccache-v0.8.0-x86_64-apple-darwin.tar.gz'
+    destinationFolder: $(System.ArtifactsDirectory)/sccache
+
+- script: $(System.ArtifactsDirectory)/sccache/sccache-v0.8.0-x86_64-apple-darwin/sccache --start-server
+  displayName: 'Start sccache'
+
 - script: Vendor/Binaries/Premake/macOS/premake5 --file=Build.lua xcode4
   displayName: 'Run premake'
 
@@ -17,3 +33,9 @@ steps:
     sdk: 'macosx13.1'
     xcodeVersion: 'specifyPath'
     xcodeDeveloperDir: '/Applications/Xcode_14.2.app'
+  env:
+    CC: $(System.ArtifactsDirectory)/sccache/sccache-v0.8.0-x86_64-apple-darwin/sccache /usr/bin/clang
+    CXX: $(System.ArtifactsDirectory)/sccache/sccache-v0.8.0-x86_64-apple-darwin/sccache /usr/bin/clang++
+
+- script: $(System.ArtifactsDirectory)/sccache/sccache-v0.8.0-x86_64-apple-darwin/sccache --stop-server
+  displayName: 'Stop sccache'
