--- a/.azure/ubuntu-pipeline.yml
+++ b/.azure/ubuntu-pipeline.yml
@@ -5,22 +5,17 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
-# Download GitHub Release v0
-# Downloads a GitHub Release from a repository.
 - task: DownloadGitHubRelease@0
   inputs:
     connection: jretterer-prol
     userRepository: mozilla/sccache 
-    defaultVersionType: 'latest' # 'latest' | 'specificVersion' | 'specificTag'. Required. Default version. Default: latest.
-    #version: 'v0.8.0'
+    defaultVersionType: 'latest'
     itemPattern: 'sccache-v0.8.0-x86_64-unknown-linux-musl.tar.gz'
-    downloadPath: '$(System.ArtifactsDirectory)' # string. Required. Destination directory. Default: $(System.ArtifactsDirectory).
+    downloadPath: '$(System.ArtifactsDirectory)' 
 
-# Extract files v1
-# Extract a variety of archive and compression files such as .7z, .rar, .tar.gz, and .zip.
 - task: ExtractFiles@1
   inputs:
-    archiveFilePatterns: '$(System.ArtifactsDirectory)/sccache-v0.8.0-x86_64-unknown-linux-musl.tar.gz' # string. Required. Archive file patterns. Default: **/*.zip.
+    archiveFilePatterns: '$(System.ArtifactsDirectory)/sccache-v0.8.0-x86_64-unknown-linux-musl.tar.gz'
     destinationFolder: $(System.ArtifactsDirectory)/sccache
 
 - script: $(System.ArtifactsDirectory)/sccache/sccache-v0.8.0-x86_64-unknown-linux-musl/sccache --start-server
