Change clang path

--- a/.azure/mac-pipeline.yml
+++ b/.azure/mac-pipeline.yml
@@ -34,8 +34,8 @@ steps:
     xcodeVersion: 'specifyPath'
     xcodeDeveloperDir: '/Applications/Xcode_14.2.app'
   env:
-    CC: $(System.ArtifactsDirectory)/sccache/sccache-v0.8.0-x86_64-apple-darwin/sccache /usr/bin/clang
-    CXX: $(System.ArtifactsDirectory)/sccache/sccache-v0.8.0-x86_64-apple-darwin/sccache /usr/bin/clang++
+    CC: $(System.ArtifactsDirectory)/sccache/sccache-v0.8.0-x86_64-apple-darwin/sccache clang
+    CXX: $(System.ArtifactsDirectory)/sccache/sccache-v0.8.0-x86_64-apple-darwin/sccache clang++
 
 - script: $(System.ArtifactsDirectory)/sccache/sccache-v0.8.0-x86_64-apple-darwin/sccache --stop-server
   displayName: 'Stop sccache'
