Add wrapper scripts

--- a/.azure/mac-pipeline.yml
+++ b/.azure/mac-pipeline.yml
@@ -18,6 +18,22 @@ steps:
     archiveFilePatterns: '$(System.ArtifactsDirectory)/sccache-v0.8.0-x86_64-apple-darwin.tar.gz'
     destinationFolder: $(System.ArtifactsDirectory)/sccache
 
+- script: |
+    cat > $(System.ArtifactsDirectory)/sccache/sccache_clang << EOF
+    #!/bin/sh
+    exec $(System.ArtifactsDirectory)/sccache/sccache-v0.8.0-x86_64-apple-darwin/sccache /usr/bin/clang "$@"
+    EOF
+    chmod 755 $(System.ArtifactsDirectory)/sccache/sccache_clang
+  displayName: 'Create sccache_clang'
+
+- script: |
+    cat > $(System.ArtifactsDirectory)/sccache/sccache_clang++ << EOF
+    #!/bin/sh
+    exec $(System.ArtifactsDirectory)/sccache/sccache-v0.8.0-x86_64-apple-darwin/sccache /usr/bin/clang++ "$@"
+    EOF
+    chmod 755 $(System.ArtifactsDirectory)/sccache/sccache_clang++
+  displayName: 'Create sccache_clang++'
+
 - script: $(System.ArtifactsDirectory)/sccache/sccache-v0.8.0-x86_64-apple-darwin/sccache --start-server
   displayName: 'Start sccache'
 
@@ -34,8 +50,9 @@ steps:
     xcodeVersion: 'specifyPath'
     xcodeDeveloperDir: '/Applications/Xcode_14.2.app'
   env:
-    CC: $(System.ArtifactsDirectory)/sccache/sccache-v0.8.0-x86_64-apple-darwin/sccache clang
-    CXX: $(System.ArtifactsDirectory)/sccache/sccache-v0.8.0-x86_64-apple-darwin/sccache clang++
+    CC: $(System.ArtifactsDirectory)/sccache/sccache_clang
+    CXX: $(System.ArtifactsDirectory)/sccache/sccache_clang++
 
 - script: $(System.ArtifactsDirectory)/sccache/sccache-v0.8.0-x86_64-apple-darwin/sccache --stop-server
   displayName: 'Stop sccache'
+  continueOnError: true
