Show wrapper contents

--- a/.azure/mac-pipeline.yml
+++ b/.azure/mac-pipeline.yml
@@ -24,6 +24,7 @@ steps:
     exec $(System.ArtifactsDirectory)/sccache/sccache-v0.8.0-x86_64-apple-darwin/sccache /usr/bin/clang "$@"
     EOF
     chmod 755 $(System.ArtifactsDirectory)/sccache/sccache_clang
+    cat $(System.ArtifactsDirectory)/sccache/sccache_clang
   displayName: 'Create sccache_clang'
 
 - script: |
@@ -32,6 +33,7 @@ steps:
     exec $(System.ArtifactsDirectory)/sccache/sccache-v0.8.0-x86_64-apple-darwin/sccache /usr/bin/clang++ "$@"
     EOF
     chmod 755 $(System.ArtifactsDirectory)/sccache/sccache_clang++
+    cat $(System.ArtifactsDirectory)/sccache/sccache_clang++
   displayName: 'Create sccache_clang++'
 
 - script: $(System.ArtifactsDirectory)/sccache/sccache-v0.8.0-x86_64-apple-darwin/sccache --start-server
