escape special chars

--- a/.azure/mac-pipeline.yml
+++ b/.azure/mac-pipeline.yml
@@ -21,7 +21,7 @@ steps:
 - script: |
     cat > $(System.ArtifactsDirectory)/sccache/sccache_clang << EOF
     #!/bin/sh
-    exec $(System.ArtifactsDirectory)/sccache/sccache-v0.8.0-x86_64-apple-darwin/sccache /usr/bin/clang "$@"
+    exec $(System.ArtifactsDirectory)/sccache/sccache-v0.8.0-x86_64-apple-darwin/sccache /usr/bin/clang "\$@"
     EOF
     chmod 755 $(System.ArtifactsDirectory)/sccache/sccache_clang
     cat $(System.ArtifactsDirectory)/sccache/sccache_clang
@@ -30,7 +30,7 @@ steps:
 - script: |
     cat > $(System.ArtifactsDirectory)/sccache/sccache_clang++ << EOF
     #!/bin/sh
-    exec $(System.ArtifactsDirectory)/sccache/sccache-v0.8.0-x86_64-apple-darwin/sccache /usr/bin/clang++ "$@"
+    exec $(System.ArtifactsDirectory)/sccache/sccache-v0.8.0-x86_64-apple-darwin/sccache /usr/bin/clang++ "\$@"
     EOF
     chmod 755 $(System.ArtifactsDirectory)/sccache/sccache_clang++
     cat $(System.ArtifactsDirectory)/sccache/sccache_clang++
