Try double quotes

--- a/.azure/windows-pipeline.yml
+++ b/.azure/windows-pipeline.yml
@@ -19,9 +19,9 @@ steps:
     destinationFolder: $(System.ArtifactsDirectory)/sccache
 
 - script: |
-    echo '@echo off' > $(System.ArtifactsDirectory)\sccache\cl.bat
-    echo 'set VS_UNICODE_OUTPUT=' >> $(System.ArtifactsDirectory)\sccache\cl.bat
-    echo '$(System.ArtifactsDirectory)\sccache\sccache-v0.8.0-x86_64-pc-windows-msvc\sccache.exe cl.exe %*' >> $(System.ArtifactsDirectory)\sccache\cl.bat
+    echo "@echo off" > $(System.ArtifactsDirectory)\sccache\cl.bat
+    echo "set VS_UNICODE_OUTPUT=" >> $(System.ArtifactsDirectory)\sccache\cl.bat
+    echo "$(System.ArtifactsDirectory)\sccache\sccache-v0.8.0-x86_64-pc-windows-msvc\sccache.exe cl.exe %*" >> $(System.ArtifactsDirectory)\sccache\cl.bat
     type $(System.ArtifactsDirectory)\sccache\cl.bat
   displayName: 'Create cl.bat'
 
