--- a/.azure/windows-pipeline.yml
+++ b/.azure/windows-pipeline.yml
@@ -25,10 +25,19 @@ steps:
     type $(System.ArtifactsDirectory)\sccache\cl.bat
   displayName: 'Create cl.bat'
 
+- script: $(System.ArtifactsDirectory)/sccache/sccache-v0.8.0-x86_64-apple-darwin/sccache --start-server
+  displayName: 'Start sccache'
+
 - script: Vendor\Binaries\Premake\Windows\premake5.exe --file=Build.lua vs2022
   displayName: 'Run premake'
+  env:
+    SCCACHE_BUILDTOOLS_PATH: $(System.ArtifactsDirectory)/sccache/
+    SCCACHE_BUILDTOOLS_EXE: cl.bat
 
 - task: VSBuild@1
   displayName: 'msbuild'
   inputs:
     solution: 'New Project.sln'
+
+- script: $(System.ArtifactsDirectory)/sccache/sccache-v0.8.0-x86_64-apple-darwin/sccache --stop-server
+  displayName: 'Stop sccache'
