--- a/.azure/windows-pipeline.yml
+++ b/.azure/windows-pipeline.yml
@@ -25,7 +25,7 @@ steps:
     type $(System.ArtifactsDirectory)\sccache\cl.bat
   displayName: 'Create cl.bat'
 
-- script: $(System.ArtifactsDirectory)/sccache/sccache-v0.8.0-x86_64-apple-darwin/sccache --start-server
+- script: $(System.ArtifactsDirectory)\sccache\sccache-v0.8.0-x86_64-pc-windows-msvc\sccache.exe --start-server
   displayName: 'Start sccache'
 
 - script: Vendor\Binaries\Premake\Windows\premake5.exe --file=Build.lua vs2022
@@ -39,5 +39,5 @@ steps:
   inputs:
     solution: 'New Project.sln'
 
-- script: $(System.ArtifactsDirectory)/sccache/sccache-v0.8.0-x86_64-apple-darwin/sccache --stop-server
+- script: $(System.ArtifactsDirectory)\sccache\sccache-v0.8.0-x86_64-pc-windows-msvc\sccache.exe --stop-server
   displayName: 'Stop sccache'
