--- a/.azure/windows-pipeline.yml
+++ b/.azure/windows-pipeline.yml
@@ -20,6 +20,7 @@ steps:
 
 - script: |
     echo @echo off > $(System.ArtifactsDirectory)\sccache\cl.bat
+    echo set VS_UNICODE_OUTPUT= >> $(System.ArtifactsDirectory)\sccache\cl.bat
     echo $(System.ArtifactsDirectory)\sccache\sccache-v0.8.0-x86_64-pc-windows-msvc\sccache.exe cl.exe %%* >> $(System.ArtifactsDirectory)\sccache\cl.bat
     type $(System.ArtifactsDirectory)\sccache\cl.bat
   displayName: 'Create cl.bat'
@@ -30,7 +31,7 @@ steps:
 - script: Vendor\Binaries\Premake\Windows\premake5.exe --file=Build.lua vs2022
   displayName: 'Run premake'
   env:
-    SCCACHE_BUILDTOOLS_PATH: $(System.ArtifactsDirectory)/sccache/
+    SCCACHE_BUILDTOOLS_PATH: $(System.ArtifactsDirectory)\sccache\
     SCCACHE_BUILDTOOLS_EXE: cl.bat
 
 - task: VSBuild@1
