sccache debug log

--- a/.azure/mac-pipeline.yml
+++ b/.azure/mac-pipeline.yml
@@ -38,6 +38,9 @@ steps:
 
 - script: $(System.ArtifactsDirectory)/sccache/sccache-v0.8.0-x86_64-apple-darwin/sccache --start-server
   displayName: 'Start sccache'
+  env:
+    SCCACHE_LOG: 'debug'
+    SCCACHE_ERROR_LOG: '$(Pipeline.Workspace)/sccache.log'
 
 - script: Vendor/Binaries/Premake/macOS/premake5 --file=Build.lua xcode4
   displayName: 'Run premake'
@@ -54,7 +57,13 @@ steps:
   env:
     CC: $(System.ArtifactsDirectory)/sccache/sccache_clang
     CXX: $(System.ArtifactsDirectory)/sccache/sccache_clang++
+    SCCACHE_LOG: 'debug'
+    SCCACHE_ERROR_LOG: '$(Pipeline.Workspace)/sccache.log'
 
 - script: $(System.ArtifactsDirectory)/sccache/sccache-v0.8.0-x86_64-apple-darwin/sccache --stop-server
   displayName: 'Stop sccache'
-  continueOnError: true
+
+- task: PublishPipelineArtifact@1
+  inputs:
+    targetPath: '$(Pipeline.Workspace)'
+    publishLocation: 'pipeline'
