--- a/.azure/ubuntu-pipeline.yml
+++ b/.azure/ubuntu-pipeline.yml
@@ -2,9 +2,12 @@ trigger:
 - azure-pipelines
 
 pool:
-  vmImage: ubuntu-latest
+  name: vmssagentspool
 
 steps:
+- script: apt install -y gcc-10 g++-10
+  displayName: 'install gcc'
+
 - task: DownloadGitHubRelease@0
   inputs:
     connection: jretterer-prol
