--- a/.azure/ubuntu-pipeline.yml
+++ b/.azure/ubuntu-pipeline.yml
@@ -5,7 +5,7 @@ pool:
   name: vmssagentspool
 
 steps:
-- script: sudo apt install -y gcc-10 g++-10
+- script: sudo apt install -y gcc-10 g++-10 make
   displayName: 'install gcc'
 
 - task: DownloadGitHubRelease@0
